# steak-contracts

./: .gitignore  Makefile  build.sh  build_apple_m1.sh
contracts/cw20_hub/: Cargo.toml
contracts/cw20_hub/.cargo/: config
contracts/cw20_hub/examples/: cw20_hub_schema.rs
contracts/cw20_hub/schema/: execute_msg.json  instantiate_msg_for__cw20_instantiator.json
contracts/cw20_hub/src/: contract.rs  lib.rs
contracts/cw20_hub/src/testing/: custom_querier.rs  tests.rs
contracts/hub/: Cargo.toml  build.rs
contracts/hub/src/: contract.rs  execute.rs  lib.rs  math.rs  proto.rs  state.rs
contracts/hub/src/testing/: tests.rs
contracts/osmosis_hub/: Cargo.toml
contracts/osmosis_hub/.cargo/: config
contracts/osmosis_hub/examples/: osmosis_hub_schema.rs
contracts/osmosis_hub/schema/: config_response.json  instantiate_msg_for__osmosis_denom_instantiator.json  query_msg.json  state_response.json
contracts/osmosis_hub/src/: contract.rs  lib.rs
contracts/osmosis_hub/src/testing/: custom_querier.rs  tests.rs
scripts/: generate-types.sh  package-lock.json  package.json
