[package]
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "cw20-steak-hub"
repository = "https://github.com/st4k3h0us3/steak-contracts"
version = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {version = "1.0", features = ["staking"]}
cw-storage-plus = "0.13"
cw20 = "0.13.2"
cw20-base = "0.13.2"
steak = {path = "../../packages/steak"}
thiserror = {version = "1.0.31"}
cw-asset = {rev = "8f6f3af5e28e9018e55fc891753d8bf68aa75590", git = "https://github.com/apollodao/cw-asset.git"}

[dev-dependencies]
apollo-proto-rust = {rev = "0810057108927c3932836ee1f2c5403e997b37e3", git = "https://github.com/apollodao/apollo-proto-rust.git"}
prost = "0.10"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}