[package]
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "cw20-steak-hub"
repository = "https://github.com/st4k3h0us3/steak-contracts"
version = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {version = "1.0", features = ["staking"]}
cw-asset = "2.0.0"
cw-storage-plus = "0.13"
cw-token = {branch = "master", git = "https://github.com/apollodao/cw-token.git"}
cw20 = "0.13.2"
cw20-base = "0.13.2"
steak = {path = "../../packages/steak"}
thiserror = {version = "1.0.31"}

[dev-dependencies]
prost = "0.10"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
