[package]
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "steak-hub"
repository = "https://github.com/st4k3h0us3/steak-contracts"
version = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {version = "1.0", features = ["staking"]}
cw-storage-plus = "0.13"
cw20 = "0.13.2"
prost = "0.10"
prost-types = "0.10"
steak = {path = "../../packages/steak"}
thiserror = {version = "1.0.31"}

# below used for generating rust types from protos found in root of project
# 1. uncomment below and what's in build.rs
# 2. run `cargo build` to generate the types in `target/debug/build/osmosis-adaptor/out`
# 3. copy over types to proto.rs file to use in your code
# 4. comment out below and what's in build.rs after you're done in order to build for prod
[build-dependencies]
prost-build = {version = "0.10"}

[dev-dependencies]
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
