[package]
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "osmosis-steak-hub"
repository = "https://github.com/st4k3h0us3/steak-contracts"
version = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {version = "1.0", features = ["staking"]}
cw-storage-plus = "0.13"
cw20 = "0.13.2"
steak = {path = "../../packages/steak"}
thiserror = {version = "1.0.31"}
cw-asset = {rev = "5f2fd3d15c18995e5ec0fdbc1456469a69edd4a4", git = "https://github.com/apollodao/cw-asset.git"}

[dev-dependencies]
apollo-proto-rust = {branch = "master", git = "https://github.com/apollodao/apollo-proto-rust.git"}
prost = "0.10"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
