[package]
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "osmosis-steak-hub"
repository = "https://github.com/st4k3h0us3/steak-contracts"
version = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {version = "1.0", features = ["staking"]}
cw-storage-plus = "0.13"
cw20 = "0.13.2"
steak = {path = "../../packages/steak"}
thiserror = {version = "1.0.31"}
cw-asset = {rev = "ce189ed8bb0201a85ef58e7bb070c1417d706d55", git = "https://github.com/apollodao/cw-asset.git"}

[dev-dependencies]
apollo-proto-rust = {rev = "7ff193c00fb63357d686c859eac89b40667050b5", git = "https://github.com/apollodao/apollo-proto-rust.git"}
prost = "0.10"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
